--- a/index.html
+++ b/index.html
@@ -859,10 +859,10 @@
                 <div class="w-full mx-4">
                     <div class="text-center mx-auto mb-[60px] lg:mb-20 max-w-[620px]">
                         <span class="block mb-2 text-lg font-semibold text-primary">
-                            Testimonials
+                            Testimoni
                         </span>
                         <h2 class="font-bold text-3xl sm:text-4xl md:text-[42px] text-dark mb-4">
-                            What our Client Say
+                            Apa kata klien kami
                         </h2>
                         <p class="text-lg leading-relaxed sm:text-xl sm:leading-relaxed text-body-color">
                             Testimoni Pelanggan yang Sudah Menggunakan SIMRS Reksamedic
@@ -871,10 +871,56 @@
                 </div>
             </div>
 
-            <div class="flex flex-wrap">
-                <!-- <div class="w-full px-4 md:w-1/2 lg:w-1/3">
-                    <div class="p-8 mb-12 bg-white ud-single-testimonial shadow-testimonial wow fadeInUp" data-wow-delay=".1s
-              ">
+            <div class="w-full px-4 mx-auto md:w-1/2 lg:w-1/3">
+                <div class="p-8 mb-12 bg-white ud-single-testimonial shadow-testimonial wow fadeInUp" data-wow-delay=".15s">
+                    <div class="flex items-center mb-3 ud-testimonial-ratings">
+                        <span class="text-[#fbb040] mr-1">
+                            <svg width="18" height="16" viewBox="0 0 18 16" class="fill-current">
+                                <path d="M9.09815 0.360596L11.1054 6.06493H17.601L12.3459 9.5904L14.3532 15.2947L9.09815 11.7693L3.84309 15.2947L5.85035 9.5904L0.595291 6.06493H7.0909L9.09815 0.360596Z" />
+                            </svg>
+                        </span>
+                        <span class="text-[#fbb040] mr-1">
+                            <svg width="18" height="16" viewBox="0 0 18 16" class="fill-current">
+                                <path d="M9.09815 0.360596L11.1054 6.06493H17.601L12.3459 9.5904L14.3532 15.2947L9.09815 11.7693L3.84309 15.2947L5.85035 9.5904L0.595291 6.06493H7.0909L9.09815 0.360596Z" />
+                            </svg>
+                        </span>
+                        <span class="text-[#fbb040] mr-1">
+                            <svg width="18" height="16" viewBox="0 0 18 16" class="fill-current">
+                                <path d="M9.09815 0.360596L11.1054 6.06493H17.601L12.3459 9.5904L14.3532 15.2947L9.09815 11.7693L3.84309 15.2947L5.85035 9.5904L0.595291 6.06493H7.0909L9.09815 0.360596Z" />
+                            </svg>
+                        </span>
+                        <span class="text-[#fbb040] mr-1">
+                            <svg width="18" height="16" viewBox="0 0 18 16" class="fill-current">
+                                <path d="M9.09815 0.360596L11.1054 6.06493H17.601L12.3459 9.5904L14.3532 15.2947L9.09815 11.7693L3.84309 15.2947L5.85035 9.5904L0.595291 6.06493H7.0909L9.09815 0.360596Z" />
+                            </svg>
+                        </span>
+                        <span class="text-[#fbb040] mr-1">
+                            <svg width="18" height="16" viewBox="0 0 18 16" class="fill-current">
+                                <path d="M9.09815 0.360596L11.1054 6.06493H17.601L12.3459 9.5904L14.3532 15.2947L9.09815 11.7693L3.84309 15.2947L5.85035 9.5904L0.595291 6.06493H7.0909L9.09815 0.360596Z" />
+                            </svg>
+                        </span>
+                    </div>
+                    <div class="mb-6 ud-testimonial-content">
+                        <p class="text-base tracking-wide text-body-color">
+                            “Keunggulan utama SIMRS Reksamedic adalah kemudahan penggunaan dan support teknis yang sangat responsif. Kami tidak perlu khawatir ketika ada kendala, karena tim mereka siap membantu kapanpun.”
+                        </p>
+                    </div>
+                    <div class="flex items-center ud-testimonial-info">
+                        <div class="ud-testimonial-image w-[50px] h-[50px] rounded-full overflow-hidden mr-5">
+                            <img src="assets/images/testimonials/author-02.png" alt="author" />
+                        </div>
+                        <div class="ud-testimonial-meta">
+                            <h4 class="text-sm font-semibold">Maulana Yusril Mahendra</h4>
+                            <p class="text-[#969696] text-xs">IT RSUD Ciawi Kabupaten Bogor</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- <div class="flex flex-wrap">
+                <div class="w-full px-4 md:w-1/2 lg:w-1/3">
+                    <div class="p-8 mb-12 bg-white ud-single-testimonial shadow-testimonial wow fadeInUp" data-wow-delay=".1s">
                         <div class="flex items-center mb-3 ud-testimonial-ratings">
                             <span class="text-[#fbb040] mr-1">
                                 <svg width="18" height="16" viewBox="0 0 18 16" class="fill-current">
@@ -919,54 +965,9 @@
                             </div>
                         </div>
                     </div>
-                </div> -->
-                <div class="w-full px-4 mx-auto md:w-1/2 lg:w-1/3">
-                    <div class="p-8 mb-12 bg-white ud-single-testimonial shadow-testimonial wow fadeInUp" data-wow-delay=".15s
-              ">
-                        <div class="flex items-center mb-3 ud-testimonial-ratings">
-                            <span class="text-[#fbb040] mr-1">
-                                <svg width="18" height="16" viewBox="0 0 18 16" class="fill-current">
-                                    <path d="M9.09815 0.360596L11.1054 6.06493H17.601L12.3459 9.5904L14.3532 15.2947L9.09815 11.7693L3.84309 15.2947L5.85035 9.5904L0.595291 6.06493H7.0909L9.09815 0.360596Z" />
-                                </svg>
-                            </span>
-                            <span class="text-[#fbb040] mr-1">
-                                <svg width="18" height="16" viewBox="0 0 18 16" class="fill-current">
-                                    <path d="M9.09815 0.360596L11.1054 6.06493H17.601L12.3459 9.5904L14.3532 15.2947L9.09815 11.7693L3.84309 15.2947L5.85035 9.5904L0.595291 6.06493H7.0909L9.09815 0.360596Z" />
-                                </svg>
-                            </span>
-                            <span class="text-[#fbb040] mr-1">
-                                <svg width="18" height="16" viewBox="0 0 18 16" class="fill-current">
-                                    <path d="M9.09815 0.360596L11.1054 6.06493H17.601L12.3459 9.5904L14.3532 15.2947L9.09815 11.7693L3.84309 15.2947L5.85035 9.5904L0.595291 6.06493H7.0909L9.09815 0.360596Z" />
-                                </svg>
-                            </span>
-                            <span class="text-[#fbb040] mr-1">
-                                <svg width="18" height="16" viewBox="0 0 18 16" class="fill-current">
-                                    <path d="M9.09815 0.360596L11.1054 6.06493H17.601L12.3459 9.5904L14.3532 15.2947L9.09815 11.7693L3.84309 15.2947L5.85035 9.5904L0.595291 6.06493H7.0909L9.09815 0.360596Z" />
-                                </svg>
-                            </span>
-                            <span class="text-[#fbb040] mr-1">
-                                <svg width="18" height="16" viewBox="0 0 18 16" class="fill-current">
-                                    <path d="M9.09815 0.360596L11.1054 6.06493H17.601L12.3459 9.5904L14.3532 15.2947L9.09815 11.7693L3.84309 15.2947L5.85035 9.5904L0.595291 6.06493H7.0909L9.09815 0.360596Z" />
-                                </svg>
-                            </span>
-                        </div>
-                        <div class="mb-6 ud-testimonial-content">
-                            <p class="text-base tracking-wide text-body-color">
-                                “Keunggulan utama SIMRS Reksamedic adalah kemudahan penggunaan dan support teknis yang sangat responsif. Kami tidak perlu khawatir ketika ada kendala, karena tim mereka siap membantu kapanpun.”
-                            </p>
-                        </div>
-                        <div class="flex items-center ud-testimonial-info">
-                            <div class="ud-testimonial-image w-[50px] h-[50px] rounded-full overflow-hidden mr-5">
-                                <img src="assets/images/testimonials/author-02.png" alt="author" />
-                            </div>
-                            <div class="ud-testimonial-meta">
-                                <h4 class="text-sm font-semibold">Maulana Yusril Mahendra</h4>
-                                <p class="text-[#969696] text-xs">IT RSUD Ciawi Kabupaten Bogor</p>
-                            </div>
-                        </div>
-                    </div>
                 </div>
-                <!-- <div class="w-full px-4 md:w-1/2 lg:w-1/3">
+
+                <div class="w-full px-4 md:w-1/2 lg:w-1/3">
                     <div class="p-8 mb-12 bg-white ud-single-testimonial shadow-testimonial wow fadeInUp" data-wow-delay=".2s
               ">
                         <div class="flex items-center mb-3 ud-testimonial-ratings">
@@ -1013,48 +1014,48 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
-                <div class="flex flex-wrap">
-                    <div class="w-full mx-4">
-                        <div class="wow fadeInUp" data-wow-delay=".2s">
-                            <div class="mb-8 ud-title">
-                                <h6 class="relative inline-flex items-center text-xs font-normal text-body-color">
-                                    Some Of Our Clients
-                                    <span class="w-8 h-[1px] inline-block bg-[#afb2b5] ml-4">
-                                    </span>
-                                </h6>
+            </div>
+            <div class="flex flex-wrap">
+                <div class="w-full mx-4">
+                    <div class="wow fadeInUp" data-wow-delay=".2s">
+                        <div class="mb-8 ud-title">
+                            <h6 class="relative inline-flex items-center text-xs font-normal text-body-color">
+                                Some Of Our Clients
+                                <span class="w-8 h-[1px] inline-block bg-[#afb2b5] ml-4">
+                                </span>
+                            </h6>
+                        </div>
+                        <div class="flex flex-wrap items-center ud-brands-logo">
+                            <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
+                                <a href="https://tailgrids.com" target="_blank" rel="nofollow noopner">
+                                    <img src="assets/images/brands/tailgrids.svg" alt="tailgrids" class="duration-300 grayscale hover:filter-none" />
+                                </a>
                             </div>
-                            <div class="flex flex-wrap items-center ud-brands-logo">
-                                <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-                                    <a href="https://tailgrids.com" target="_blank" rel="nofollow noopner">
-                                        <img src="assets/images/brands/tailgrids.svg" alt="tailgrids" class="duration-300 grayscale hover:filter-none" />
-                                    </a>
-                                </div>
-                                <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-                                    <a href="https://ayroui.com" target="_blank" rel="nofollow noopner">
-                                        <img src="assets/images/brands/ayroui.svg" alt="ayroui" class="duration-300 grayscale hover:filter-none" />
-                                    </a>
-                                </div>
-                                <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-                                    <a href="https://uideck.com" target="_blank" rel="nofollow noopner">
-                                        <img src="assets/images/brands/uideck.svg" alt="uideck" class="duration-300 grayscale hover:filter-none" />
-                                    </a>
-                                </div>
-                                <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-                                    <a href="https://graygrids.com" target="_blank" rel="nofollow noopner">
-                                        <img src="assets/images/brands/graygrids.svg" alt="graygrids" class="duration-300 grayscale hover:filter-none" />
-                                    </a>
-                                </div>
-                                <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-                                    <a href="https://lineicons.com" target="_blank" rel="nofollow noopner">
-                                        <img src="assets/images/brands/lineicons.svg" alt="lineicons" class="duration-300 grayscale hover:filter-none" />
-                                    </a>
-                                </div>
+                            <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
+                                <a href="https://ayroui.com" target="_blank" rel="nofollow noopner">
+                                    <img src="assets/images/brands/ayroui.svg" alt="ayroui" class="duration-300 grayscale hover:filter-none" />
+                                </a>
+                            </div>
+                            <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
+                                <a href="https://uideck.com" target="_blank" rel="nofollow noopner">
+                                    <img src="assets/images/brands/uideck.svg" alt="uideck" class="duration-300 grayscale hover:filter-none" />
+                                </a>
+                            </div>
+                            <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
+                                <a href="https://graygrids.com" target="_blank" rel="nofollow noopner">
+                                    <img src="assets/images/brands/graygrids.svg" alt="graygrids" class="duration-300 grayscale hover:filter-none" />
+                                </a>
+                            </div>
+                            <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
+                                <a href="https://lineicons.com" target="_blank" rel="nofollow noopner">
+                                    <img src="assets/images/brands/lineicons.svg" alt="lineicons" class="duration-300 grayscale hover:filter-none" />
+                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
+        </div>
     </section>
     <!-- ====== Testimonials End ====== -->
 
