--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                                     </a>
                                 </li>
                                 <li class="relative group">
-                                    <a href="#team" class="flex py-2 mx-8 text-base ud-menu-scroll text-dark lg:text-white lg:group-hover:opacity-70 lg:group-hover:text-white group-hover:text-primary lg:py-6 lg:inline-flex lg:px-0 lg:mr-0 lg:ml-7 xl:ml-12">
-                                        Team
+                                    <a href="#implementation" class="flex py-2 mx-8 text-base ud-menu-scroll text-dark lg:text-white lg:group-hover:opacity-70 lg:group-hover:text-white group-hover:text-primary lg:py-6 lg:inline-flex lg:px-0 lg:mr-0 lg:ml-7 xl:ml-12">
+                                        Implementation
                                     </a>
                                 </li>
                                 <li class="relative group">
@@ -96,14 +96,14 @@
                             </ul>
                         </nav>
                     </div>
-                    <div class="justify-end hidden pr-16 sm:flex lg:pr-0">
+                    <!-- <div class="justify-end hidden pr-16 sm:flex lg:pr-0">
                         <a href="signin.html" class="py-3 text-base font-medium text-white hover:opacity-70 px-7 loginBtn">
                             Sign In
                         </a>
                         <a href="signup.html" class="px-6 py-3 text-base font-medium text-white duration-300 ease-in-out bg-white rounded-lg bg-opacity-20 hover:bg-opacity-100 hover:text-primary signUpBtn">
                             Sign Up
                         </a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -1059,21 +1059,20 @@
     </section>
     <!-- ====== Testimonials End ====== -->
 
-    <!-- ====== Team Section Start -->
-    <section id="team" class="pt-20 lg:pt-[120px] pb-10 lg:pb-20">
+    <!-- ====== Implementation Section Start -->
+    <section id="implementation" class="pt-20 lg:pt-[120px] pb-10 lg:pb-20">
         <div class="container">
             <div class="flex flex-wrap -mx-4">
                 <div class="w-full px-4">
                     <div class="text-center mx-auto mb-[60px] max-w-[620px]">
-                        <span class="block mb-2 text-lg font-semibold text-primary">
-                            Our Team
+                        <span class="block mb-5 text-lg font-semibold text-primary">
+                            Steps
                         </span>
                         <h2 class="font-bold text-3xl sm:text-4xl md:text-[42px] text-dark mb-4">
-                            Meet Our Team
+                            Implementation Steps
                         </h2>
                         <p class="text-lg leading-relaxed sm:text-xl sm:leading-relaxed text-body-color">
-                            There are many variations of passages of Lorem Ipsum available
-                            but the majority have suffered alteration in some form.
+                            Langkah Mudah untuk Implementasi SIMRS Reksamedic
                         </p>
                     </div>
                 </div>
@@ -1082,7 +1081,7 @@
             <div class="flex flex-wrap justify-center -mx-4">
                 <div class="w-full px-4 sm:w-1/2 lg:w-1/4">
                     <div class="mb-10 wow fadeInUp" data-wow-delay=".1s">
-                        <div class="relative w-[170px] h-170px] rounded-full z-10 mx-auto mb-6">
+                        <!-- <div class="relative w-[170px] h-170px] rounded-full z-10 mx-auto mb-6">
                             <img src="assets/images/team/team-01.png" alt="image" class="w-full rounded-full" />
                             <span class="absolute top-0 left-0 z-[-1]">
                                 <svg width="71" height="82" viewBox="0 0 71 82" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1149,15 +1148,15 @@
                                     <path d="M21.5 21.5L0.505701 21.5C0.767606 10.023 10.023 0.767604 21.5 0.505697L21.5 21.5Z" stroke="#13C296" />
                                 </svg>
                             </span>
-                        </div>
-                        <div class="text-center">
-                            <h4 class="mb-2 text-lg font-medium text-dark">
-                                Adveen Desuza
+                        </div> -->
+                        <div class="text-left">
+                            <h4 class="mb-5 text-lg font-medium text-dark">
+                                Konsultasi Gratis
                             </h4>
                             <p class="mb-5 text-sm font-medium text-body-color">
-                                UI Designer
+                                Hubungi tim kami untuk mendapatkan sesi konsultasi gratis mengenai kebutuhan rumah sakit Anda.
                             </p>
-                            <div class="flex items-center justify-center">
+                            <!-- <div class="flex items-center justify-center">
                                 <a href="javascript:void(0)" class="text-[#cdced6] hover:text-primary w-8 h-8 mx-2 flex items-center justify-center">
                                     <svg width="10" height="18" viewBox="0 0 10 18" class="fill-current">
                                         <path d="M9.29878 7.2H7.74898H7.19548V6.61935V4.81936V4.23871H7.74898H8.91133C9.21575 4.23871 9.46483 4.00645 9.46483 3.65806V0.580645C9.46483 0.26129 9.24343 0 8.91133 0H6.89106C4.70474 0 3.18262 1.62581 3.18262 4.03548V6.56129V7.14194H2.62912H0.747223C0.359774 7.14194 0 7.46129 0 7.92581V10.0161C0 10.4226 0.304424 10.8 0.747223 10.8H2.57377H3.12727V11.3806V17.2161C3.12727 17.6226 3.43169 18 3.87449 18H6.47593C6.64198 18 6.78036 17.9129 6.89106 17.7968C7.00176 17.6806 7.08478 17.4774 7.08478 17.3032V11.4097V10.829H7.66596H8.91133C9.2711 10.829 9.54785 10.5968 9.6032 10.2484V10.2194V10.1903L9.99065 8.1871C10.0183 7.98387 9.99065 7.75161 9.8246 7.51935C9.76925 7.37419 9.52018 7.22903 9.29878 7.2Z" />
@@ -1175,13 +1174,13 @@
                                         <path d="M13.7397 3.03418C13.3676 3.03418 13.0527 3.34905 13.0527 3.72116C13.0527 4.09328 13.3676 4.40815 13.7397 4.40815C14.1118 4.40815 14.4267 4.09328 14.4267 3.72116C14.4267 3.34905 14.1405 3.03418 13.7397 3.03418Z" />
                                     </svg>
                                 </a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
                 <div class="w-full px-4 sm:w-1/2 lg:w-1/4">
                     <div class="mb-10 wow fadeInUp" data-wow-delay=".15s">
-                        <div class="relative w-[170px] h-170px] rounded-full z-10 mx-auto mb-6">
+                        <!-- <div class="relative w-[170px] h-170px] rounded-full z-10 mx-auto mb-6">
                             <img src="assets/images/team/team-02.png" alt="image" class="w-full rounded-full" />
                             <span class="absolute top-0 left-0 z-[-1]">
                                 <svg width="71" height="82" viewBox="0 0 71 82" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1248,13 +1247,13 @@
                                     <path d="M21.5 21.5L0.505701 21.5C0.767606 10.023 10.023 0.767604 21.5 0.505697L21.5 21.5Z" stroke="#13C296" />
                                 </svg>
                             </span>
-                        </div>
-                        <div class="text-center">
-                            <h4 class="mb-2 text-lg font-medium text-dark">Jezmin uniya</h4>
+                        </div> -->
+                        <div class="text-left">
+                            <h4 class="mb-5 text-lg font-medium text-dark">Analisis Kebutuhan</h4>
                             <p class="mb-5 text-sm font-medium text-body-color">
-                                Product Designer
+                                Kami akan melakukan analisis mendalam tentang alur kerja dan kebutuhan rumah sakit untuk menyesuaikan sistem yang paling cocok.
                             </p>
-                            <div class="flex items-center justify-center">
+                            <!-- <div class="flex items-center justify-center">
                                 <a href="javascript:void(0)" class="text-[#cdced6] hover:text-primary w-8 h-8 mx-2 flex items-center justify-center">
                                     <svg width="10" height="18" viewBox="0 0 10 18" class="fill-current">
                                         <path d="M9.29878 7.2H7.74898H7.19548V6.61935V4.81936V4.23871H7.74898H8.91133C9.21575 4.23871 9.46483 4.00645 9.46483 3.65806V0.580645C9.46483 0.26129 9.24343 0 8.91133 0H6.89106C4.70474 0 3.18262 1.62581 3.18262 4.03548V6.56129V7.14194H2.62912H0.747223C0.359774 7.14194 0 7.46129 0 7.92581V10.0161C0 10.4226 0.304424 10.8 0.747223 10.8H2.57377H3.12727V11.3806V17.2161C3.12727 17.6226 3.43169 18 3.87449 18H6.47593C6.64198 18 6.78036 17.9129 6.89106 17.7968C7.00176 17.6806 7.08478 17.4774 7.08478 17.3032V11.4097V10.829H7.66596H8.91133C9.2711 10.829 9.54785 10.5968 9.6032 10.2484V10.2194V10.1903L9.99065 8.1871C10.0183 7.98387 9.99065 7.75161 9.8246 7.51935C9.76925 7.37419 9.52018 7.22903 9.29878 7.2Z" />
@@ -1272,13 +1271,13 @@
                                         <path d="M13.7397 3.03418C13.3676 3.03418 13.0527 3.34905 13.0527 3.72116C13.0527 4.09328 13.3676 4.40815 13.7397 4.40815C14.1118 4.40815 14.4267 4.09328 14.4267 3.72116C14.4267 3.34905 14.1405 3.03418 13.7397 3.03418Z" />
                                     </svg>
                                 </a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
                 <div class="w-full px-4 sm:w-1/2 lg:w-1/4">
                     <div class="mb-10 wow fadeInUp" data-wow-delay=".2s">
-                        <div class="relative w-[170px] h-170px] rounded-full z-10 mx-auto mb-6">
+                        <!-- <div class="relative w-[170px] h-170px] rounded-full z-10 mx-auto mb-6">
                             <img src="assets/images/team/team-03.png" alt="image" class="w-full rounded-full" />
                             <span class="absolute top-0 left-0 z-[-1]">
                                 <svg width="71" height="82" viewBox="0 0 71 82" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1345,15 +1344,15 @@
                                     <path d="M21.5 21.5L0.505701 21.5C0.767606 10.023 10.023 0.767604 21.5 0.505697L21.5 21.5Z" stroke="#13C296" />
                                 </svg>
                             </span>
-                        </div>
-                        <div class="text-center">
-                            <h4 class="mb-2 text-lg font-medium text-dark">
-                                Andrieo Gloree
+                        </div> -->
+                        <div class="text-left">
+                            <h4 class="mb-5 text-lg font-medium text-dark">
+                                Support Berkelanjutan
                             </h4>
                             <p class="mb-5 text-sm font-medium text-body-color">
-                                App Developer
+                                Kami memberikan dukungan teknis berkelanjutan untuk memastikan sistem berjalan lancar dan selalu terupdate dengan fitur-fitur terbaru.
                             </p>
-                            <div class="flex items-center justify-center">
+                            <!-- <div class="flex items-center justify-center">
                                 <a href="javascript:void(0)" class="text-[#cdced6] hover:text-primary w-8 h-8 mx-2 flex items-center justify-center">
                                     <svg width="10" height="18" viewBox="0 0 10 18" class="fill-current">
                                         <path d="M9.29878 7.2H7.74898H7.19548V6.61935V4.81936V4.23871H7.74898H8.91133C9.21575 4.23871 9.46483 4.00645 9.46483 3.65806V0.580645C9.46483 0.26129 9.24343 0 8.91133 0H6.89106C4.70474 0 3.18262 1.62581 3.18262 4.03548V6.56129V7.14194H2.62912H0.747223C0.359774 7.14194 0 7.46129 0 7.92581V10.0161C0 10.4226 0.304424 10.8 0.747223 10.8H2.57377H3.12727V11.3806V17.2161C3.12727 17.6226 3.43169 18 3.87449 18H6.47593C6.64198 18 6.78036 17.9129 6.89106 17.7968C7.00176 17.6806 7.08478 17.4774 7.08478 17.3032V11.4097V10.829H7.66596H8.91133C9.2711 10.829 9.54785 10.5968 9.6032 10.2484V10.2194V10.1903L9.99065 8.1871C10.0183 7.98387 9.99065 7.75161 9.8246 7.51935C9.76925 7.37419 9.52018 7.22903 9.29878 7.2Z" />
@@ -1371,13 +1370,13 @@
                                         <path d="M13.7397 3.03418C13.3676 3.03418 13.0527 3.34905 13.0527 3.72116C13.0527 4.09328 13.3676 4.40815 13.7397 4.40815C14.1118 4.40815 14.4267 4.09328 14.4267 3.72116C14.4267 3.34905 14.1405 3.03418 13.7397 3.03418Z" />
                                     </svg>
                                 </a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
                 <div class="w-full px-4 sm:w-1/2 lg:w-1/4">
                     <div class="mb-10 wow fadeInUp" data-wow-delay=".25s">
-                        <div class="relative w-[170px] h-170px] rounded-full z-10 mx-auto mb-6">
+                        <!-- <div class="relative w-[170px] h-170px] rounded-full z-10 mx-auto mb-6">
                             <img src="assets/images/team/team-01.png" alt="image" class="w-full rounded-full" />
                             <span class="absolute top-0 left-0 z-[-1]">
                                 <svg width="71" height="82" viewBox="0 0 71 82" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1444,15 +1443,15 @@
                                     <path d="M21.5 21.5L0.505701 21.5C0.767606 10.023 10.023 0.767604 21.5 0.505697L21.5 21.5Z" stroke="#13C296" />
                                 </svg>
                             </span>
-                        </div>
-                        <div class="text-center">
-                            <h4 class="mb-2 text-lg font-medium text-dark">
-                                Jackie Sanders
+                        </div> -->
+                        <div class="text-left">
+                            <h4 class="mb-5 text-lg font-medium text-dark">
+                                Implementasi Cepat
                             </h4>
                             <p class="mb-5 text-sm font-medium text-body-color">
-                                Content Writer
+                                Proses instalasi dan pelatihan dapat dilakukan dengan cepat dan efisien, sehingga rumah sakit Anda bisa segera menggunakan SIMRS Reksamedic tanpa kendala.
                             </p>
-                            <div class="flex items-center justify-center">
+                            <!-- <div class="flex items-center justify-center">
                                 <a href="javascript:void(0)" class="text-[#cdced6] hover:text-primary w-8 h-8 mx-2 flex items-center justify-center">
                                     <svg width="10" height="18" viewBox="0 0 10 18" class="fill-current">
                                         <path d="M9.29878 7.2H7.74898H7.19548V6.61935V4.81936V4.23871H7.74898H8.91133C9.21575 4.23871 9.46483 4.00645 9.46483 3.65806V0.580645C9.46483 0.26129 9.24343 0 8.91133 0H6.89106C4.70474 0 3.18262 1.62581 3.18262 4.03548V6.56129V7.14194H2.62912H0.747223C0.359774 7.14194 0 7.46129 0 7.92581V10.0161C0 10.4226 0.304424 10.8 0.747223 10.8H2.57377H3.12727V11.3806V17.2161C3.12727 17.6226 3.43169 18 3.87449 18H6.47593C6.64198 18 6.78036 17.9129 6.89106 17.7968C7.00176 17.6806 7.08478 17.4774 7.08478 17.3032V11.4097V10.829H7.66596H8.91133C9.2711 10.829 9.54785 10.5968 9.6032 10.2484V10.2194V10.1903L9.99065 8.1871C10.0183 7.98387 9.99065 7.75161 9.8246 7.51935C9.76925 7.37419 9.52018 7.22903 9.29878 7.2Z" />
@@ -1470,7 +1469,7 @@
                                         <path d="M13.7397 3.03418C13.3676 3.03418 13.0527 3.34905 13.0527 3.72116C13.0527 4.09328 13.3676 4.40815 13.7397 4.40815C14.1118 4.40815 14.4267 4.09328 14.4267 3.72116C14.4267 3.34905 14.1405 3.03418 13.7397 3.03418Z" />
                                     </svg>
                                 </a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
